# mqtt-lib

./: .gitignore  ARCHITECTURE.md  BEBYTES_2.6_VALIDATION_REPORT.md  BEBYTES_REFACTORING.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_v2.3.md  BENCHMARK_RESULTS_v2.4_FINAL.md  CHANGELOG.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CLI_TESTING_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.broker  GITHUB_SECURITY_SETUP.md  LICENSE-APACHE-2.0  LICENSE-MIT  Makefile.toml  PROPERTY_TEST_FINDINGS.md  README.md  SECURITY.md  docker-compose.yml  mosquitto-ci.conf  mosquitto-mtls.conf  mosquitto-tls.conf  mosquitto.conf  run_integration_tests.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-mosquitto/: action.yml
.github/workflows/: auto-merge.yml  dependencies.yml  release.yml  rust.yml  supply-chain-security.yml
benches/: bebytes_comparison.rs  broker_performance.rs  broker_sync_bench.rs  concurrent_benchmarks.rs  mqtt_benchmarks.rs  simple_broker_bench.rs
crates/mqttv5-cli/: CLI_USAGE.md  Cargo.toml  README.md
crates/mqttv5-cli/src/: main.rs
crates/mqttv5-cli/src/commands/: acl_cmd.rs  broker_cmd.rs  mod.rs  passwd_cmd.rs  pub_cmd.rs  sub_cmd.rs
docs/: bebytes_2.3_migration_plan.md  bebytes_optimization_proposal.md  development.md  shared_subscriptions.md
docs/broker/: authentication.md  bridging.md  configuration.md  deployment.md  getting-started.md  monitoring.md  transports.md
docs/client/: README.md  advanced-features.md  api-reference.md  aws-iot.md  getting-started.md  testing.md  troubleshooting.md
examples/: README.md  broker_all_transports.rs  broker_bridge_demo.rs  broker_with_monitoring.rs  broker_with_opentelemetry.rs  broker_with_tls.rs  broker_with_websocket.rs  certificate_loading_demo.rs  complete_system_demo.rs  industrial_sensor_network.rs  iot_device_simulator.rs  observability_dashboard.rs  resource_monitoring.rs  shared_subscription_demo.rs  simple_broker.rs  simple_client.rs  smart_home_hub.rs  udp_verification.rs
proptest-regressions/encoding/: variable_byte.txt
proptest-regressions/packet/: property_tests.txt  subscribe.txt
scripts/: final_branch_protection.sh  generate_test_certs.sh  install-hooks.sh  proper_branch_protection.sh  quick_pr.sh  run_bebytes_benchmark.sh  setup_branch_protection.sh  simple_branch_protection.sh  smart_branch_protection.sh  test_cli.sh
src/: callback.rs  constants.rs  encoding.rs  error.rs  flags.rs  lib.rs  packet.rs  packet_id.rs  protocol.rs  session.rs  tasks.rs  test_utils.rs  topic_matching.rs  transport.rs  types.rs  validation.rs
src/broker/: acl.rs  auth.rs  binding.rs  client_handler.rs  client_handler_old.rs  config.rs  connection_pool.rs  dtls_handler.rs  hot_reload.rs  mod.rs  optimized_router.rs  resource_monitor.rs  router.rs  server.rs  sys_topics.rs  tcp_stream_wrapper.rs  tls_acceptor.rs  transport.rs  udp_handler.rs  udp_session.rs  websocket_server.rs
src/broker/bridge/: config.rs  connection.rs  loop_prevention.rs  manager.rs  mod.rs
src/broker/storage/: file_backend.rs  memory_backend.rs  mod.rs  queue.rs  retained.rs  sessions.rs  tests.rs
src/client/: connection.rs  direct.rs  error_recovery.rs  mock.rs  mod.rs  retry.rs  trait.rs
src/encoding/: binary.rs  mqtt_binary.rs  mqtt_string.rs  string.rs  variable_byte.rs  variable_int.rs
src/packet/: auth.rs  connack.rs  connect.rs  disconnect.rs  pingreq.rs  pingresp.rs  property_tests.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
src/protocol/: v5.rs
src/protocol/v5/: properties.rs  reason_codes.rs
src/session/: flow_control.rs  limits.rs  queue.rs  retained.rs  state.rs  subscription.rs
src/telemetry/: mod.rs  propagation.rs
src/testing/: cluster_sim.rs  mod.rs  mqtt_scenario.rs  turmoil_broker.rs  turmoil_client.rs
src/transport/: dtls.rs  manager.rs  mock.rs  packet_io.rs  tcp.rs  tls.rs  udp.rs  udp_fragmentation.rs  udp_reliability.rs  websocket.rs
src/validation/: aws_iot.rs  mod.rs  namespace.rs
test_certs/: README.md  ca.key  ca.pem  ca.srl  client.csr  client.key  client.pem  mqtt_passwd.txt
tests/: README.md  bebytes_26_raw_pointer_test.rs  bebytes_buffer_integration.rs  bridge_connection_tests.rs  bridge_end_to_end_test.rs  bridge_loop_prevention_tests.rs  bridge_manager_tests.rs  bridge_try_private_e2e.rs  bridge_try_private_test.rs  broker_all_transports_integration.rs  broker_bridge_integration.rs  broker_performance_tests.rs  broker_tls_integration.rs  broker_websocket_integration.rs  certificate_loading_property_tests.proptest-regressions  certificate_loading_property_tests.rs  cli_bdd.rs  cli_e2e.rs  cli_features.rs  cli_functionality.rs  cli_tls_broker.rs  cli_transports.rs  cli_udp_comprehensive.rs  cli_udp_reliability.rs  client_connection.rs  client_handler_resource_integration.rs  client_publish.rs  client_subscribe.rs  common_scenarios_demo.rs  connection_events.rs  connection_pool_performance.rs  debug_connection.rs  debug_tls_test.rs  dtls_certificate_test.rs  dtls_transport_test.rs  enhanced_auth.rs  error_handling.rs  error_recovery.rs  flow_control.rs  integration_complete_flow.rs  (+38 more)
tests/bdd/: mod.rs  steps.rs  world.rs
tests/bdd/features/: authentication.feature  basic_pubsub.feature  qos_levels.feature  retained_messages.feature  session_persistence.feature  shared_subscriptions.feature  tls_transport.feature  websocket_transport.feature  will_messages.feature
tests/common/: cli_helpers.rs  mod.rs
