[package]
name = "mqtt-v5"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
description = "High-performance async MQTT v5.0 client with certificate loading from bytes, WebSocket transport, and comprehensive property testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabriciobracht/mqtt-lib"
documentation = "https://docs.rs/mqtt-v5"
readme = "README.md"
keywords = ["mqtt", "iot", "messaging", "async", "websocket"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "CLAUDE.md",
    "mutants.out*/",
    "docker-compose.yml",
    "mosquitto*.conf",
    "test_certs/",
    "scripts/",
    "docs/",
    "run_integration_tests.sh",
    "BEBYTES_2.6_VALIDATION_REPORT.md",
    "BENCHMARK_REPORT.md",
    "BENCHMARK_RESULTS_*.md",
    "PROPERTY_TEST_FINDINGS.md",
]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.7.0", features = ["html_reports"] }
ulid = "1.2.1"
proptest = "1.5.0"
serde_json = "1.0.141"
rand = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.4"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
tempfile = "3.12.0"

[[example]]
name = "simple_broker"
path = "examples/simple_broker.rs"

[[bench]]
name = "mqtt_benchmarks"
harness = false

[[bench]]
name = "concurrent_benchmarks"
harness = false

[[bench]]
name = "bebytes_comparison"
harness = false

[lib]
name = "mqtt_v5"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[dependencies]
base64 = "0.22.1"
bcrypt = "0.17.0"
bebytes = "2.7.0"
bytes = "1.10.1"
hex = "0.4.3"
rustls = "0.23.29"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
], optional = true }
url = "2.5.4"
webpki-roots = "1.0.2"
