[package]
name = "mqttv5-cli"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
description = "Superior CLI tool for MQTT v5.0 - unified client and broker commands with ergonomic input design"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabriciobracht/mqtt-lib"
keywords = ["mqtt", "cli", "client", "broker", "iot"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "mqttv5"
path = "src/main.rs"

[dependencies]
mqtt5 = { path = "../..", features = ["udp"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
rand = "0.9.2"
serde_json = "1.0.145"
rustls = { version = "0.23", features = ["ring"] }
hex = "0.4.3"
rpassword = "7.4"
bcrypt = "0.17.1"
